Revise index.html for Driver Ledger privacy policy
Updated the HTML structure to reflect the privacy policy for the Driver Ledger app, including new metadata and content sections.

--- a/index.html
+++ b/index.html
@@ -2,40 +2,116 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>あなたのＨＰタイトル</title>
-<meta name="keywords" content="ページのキーワードA,B,C">
-<meta name="description" content="ページの説明">
+<title>Driver Ledger プライバシーポリシー</title>
+<meta name="keywords" content="Driver Ledger,プライバシーポリシー,軽貨物,収支管理">
+<meta name="description" content="Driver Ledger（軽貨物ドライバー向け収支管理アプリ）のプライバシーポリシーです。">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="index.css">
 </head>
 <body>
 <div id="outer">
-<header><div id="header-container"><div id="head-inner"><h1>あなたのＨＰタイトル</h1>
-<p class="description">あなたのＨＰの説明文</p></div></div>
+<header>
+  <div id="header-container">
+    <div id="head-inner">
+      <h1>プライバシーポリシー</h1>
+      <p class="description">Driver Ledger（軽貨物ドライバー向け収支管理アプリ）</p>
+    </div>
+  </div>
 </header>
+
 <div id="content-wrapper">
 <main>
-<div id="inner">
-<h2>記事ページ見出し・大</h2>
-<p>文章あれこれ</p>
-<h3>記事ページ見出し・中</h3>
-<p>文章あれこれ</p>
-<h4>記事ページ見出し・小</h4>
-<p>文章あれこれ</p>
-</div>
+  <div id="inner">
+
+    <h2>1. はじめに</h2>
+    <p>
+      本プライバシーポリシーは、アプリ「Driver Ledger」（以下「本アプリ」）における、
+      ユーザーの情報の取扱いについて定めるものです。
+    </p>
+
+    <h2>2. 収集する情報</h2>
+    <h3>2.1 ユーザーが入力する情報</h3>
+    <p>
+      本アプリでは、ユーザーが入力した売上・固定売上・経費・カテゴリ・ロイヤリティ設定等の情報を取り扱います。
+      これらは本アプリの機能提供（集計・表示・編集等）のために利用します。
+    </p>
+
+    <h3>2.2 端末情報・ログ等</h3>
+    <p>
+      本アプリは、アプリの安定動作や不具合調査のために、端末やOSの情報、クラッシュ情報等が
+      OSや配信プラットフォーム（例：Apple）によって収集される場合があります。
+    </p>
+
+    <h3>2.3 広告に関する情報</h3>
+    <p>
+      本アプリは無料版において広告を表示する場合があります。広告配信事業者が、端末識別子等の情報を
+      取得し、広告の配信・効果測定等に利用することがあります。取得される情報や取扱いの詳細は、
+      各広告配信事業者のプライバシーポリシーをご確認ください。
+    </p>
+
+    <h2>3. 情報の利用目的</h2>
+    <p>本アプリは、取得した情報を以下の目的で利用します。</p>
+    <ul>
+      <li>本アプリの提供・運用（記録、集計、表示、編集等）</li>
+      <li>不具合対応・品質改善（クラッシュ分析、動作改善等）</li>
+      <li>（該当する場合）広告の配信および効果測定</li>
+      <li>お問い合わせ対応</li>
+    </ul>
+
+    <h2>4. データの保存場所</h2>
+    <p>
+      ユーザーが本アプリに入力したデータは、原則としてユーザーの端末内に保存されます。
+      本アプリは、ユーザーの入力データを開発者が閲覧・収集することを目的として送信する設計ではありません。
+    </p>
+
+    <h2>5. 第三者提供</h2>
+    <p>
+      本アプリは、法令に基づく場合を除き、ユーザーの個人情報を第三者に提供しません。
+      ただし、広告表示やアプリ品質改善（クラッシュ分析等）のために、広告配信事業者やOS/配信プラットフォーム等の
+      第三者サービスが情報を取得する場合があります。
+    </p>
+
+    <h2>6. 外部サービス</h2>
+    <p>本アプリは、以下の外部サービスを利用する場合があります。</p>
+    <ul>
+      <li>広告配信サービス（無料版で広告を表示する場合）</li>
+      <li>配信プラットフォーム（例：Apple）によるクラッシュレポート等</li>
+    </ul>
+    <p>
+      外部サービスが取得する情報や取扱いについては、各サービス提供者のプライバシーポリシーをご確認ください。
+    </p>
+
+    <h2>7. お問い合わせ</h2>
+    <p>
+      本アプリに関するお問い合わせは、サポートページ（Googleフォーム）よりご連絡ください。
+    </p>
+
+    <h2>8. 改定</h2>
+    <p>
+      本ポリシーの内容は、必要に応じて変更されることがあります。変更後の内容は本ページにて公表します。
+    </p>
+
+    <h2>9. 制定日</h2>
+    <p>制定日：2026年2月25日</p>
+
+  </div>
 </main>
+
 <aside>
-<div id="middle-inner">
-<div class="side-title">menu</div>
-<div class="side">
-<ul>
-<li>記事ページへのリンク</li>
-<li>記事ページへのリンク</li>
-</ul>
-</div>
-</div>
+  <div id="middle-inner">
+    <div class="side-title">menu</div>
+    <div class="side">
+      <ul>
+        <li><a href="./">トップへ戻る</a></li>
+        <li><a href="#" onclick="history.back(); return false;">前のページへ戻る</a></li>
+      </ul>
+    </div>
+  </div>
 </aside>
+
 </div>
-<footer>© 2010 あなたのホームページ</footer>
-</div></body>
+
+<footer>© Driver Ledger</footer>
+</div>
+</body>
 </html>
